# nanoDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Promote.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
_codeql_build_dir/src/basic/: Makefile  cmake_install.cmake
_codeql_build_dir/src/chip/: Makefile  cmake_install.cmake
_codeql_build_dir/src/common/: Makefile  cmake_install.cmake
_codeql_build_dir/src/liberty/: Makefile  cmake_install.cmake
_codeql_build_dir/src/package/: Makefile  cmake_install.cmake
_codeql_build_dir/src/parasitic/: Makefile  cmake_install.cmake
_codeql_build_dir/src/power/: Makefile  cmake_install.cmake
_codeql_build_dir/src/verilog/: Makefile  cmake_install.cmake
_codeql_build_dir/test/: Makefile  cmake_install.cmake
include/: nano
include/core/: basic  chip  common  liberty  package  parasitic  power  verilog
include/nano/: common  db  fwd
include/nano/core/: archive  basic  chip  common  liberty  package  parasitic  power  verilog
src/: CMakeLists.txt  NanoDB.cpp
src/archive/: CMakeLists.txt  NSArchive.cpp  NSArchive.h
src/basic/: CMakeLists.txt  NSAlias.hpp  NSCommon.hpp  NSConfig.hpp  NSContainer.hpp  NSDatabase.cpp  NSDatabase.h  NSForward.hpp  NSHash.hpp  NSThread.hpp  NSTraits.hpp  NSVersion.hpp
src/chip/: CMakeLists.txt  NSChip.cpp  NSChip.h  NSChipBTerm.cpp  NSChipBTerm.h  NSChipBlock.cpp  NSChipBlock.h  NSChipITerm.cpp  NSChipITerm.h  NSChipInst.cpp  NSChipInst.h  NSChipNet.cpp  NSChipNet.h
src/common/: CMakeLists.txt  NSCommon.hpp  NSLookupTable.cpp  NSLookupTable.h  NSMaterial.cpp  NSMaterial.h  NSShape.cpp  NSShape.h  NSTransform.hpp  NSUnit.hpp
src/liberty/: CMakeLists.txt  NSLiberty.cpp  NSLiberty.h  NSLibertyCell.cpp  NSLibertyCell.h  NSLibertyInternalPower.cpp  NSLibertyInternalPower.h  NSLibertyKeywords.hpp  NSLibertyLeakagePower.cpp  NSLibertyLeakagePower.h  NSLibertyLibrary.cpp  NSLibertyLibrary.h  NSLibertyLibrarySet.cpp  NSLibertyLibrarySet.h  NSLibertyLut.cpp  NSLibertyLut.h  NSLibertyLutTemplate.cpp  NSLibertyLutTemplate.h  NSLibertyOperatingConditions.cpp  NSLibertyOperatingConditions.h  NSLibertyOutputCurrent.cpp  NSLibertyOutputCurrent.h  NSLibertyPin.cpp  NSLibertyPin.h  NSLibertyTiming.cpp  NSLibertyTiming.h  NSLibertyVoltage.cpp  NSLibertyVoltage.h
src/liberty/parser/: NSLibertyDescription.hpp  NSLibertyGrammar.hpp  NSLibertyParser.hpp
src/package/: CMakeLists.txt  NSPackage.cpp  NSPackage.h  NSPackageCell.cpp  NSPackageCell.h  NSPackageComponent.cpp  NSPackageComponent.h  NSPackageConnObj.cpp  NSPackageConnObj.h  NSPackageFootprint.cpp  NSPackageFootprint.h  NSPackageHierObj.cpp  NSPackageHierObj.h  NSPackageInterface.cpp  NSPackageInterface.h  NSPackageLayer.cpp  NSPackageLayer.h  NSPackageLayout.cpp  NSPackageLayout.h  NSPackageNet.cpp  NSPackageNet.h  NSPackagePadstack.cpp  NSPackagePadstack.h  NSPackagePin.cpp  NSPackagePin.h
src/package/edit/: NSPackageEditInterface.cpp  NSPackageEditInterface.h
src/package/extension/: NSPackageExtension.cpp  NSPackageExtension.h
src/package/extension/kicad/: NSKiCadExtension.cpp  NSKiCadExtension.h  NSKiCadObject.cpp  NSKiCadObject.h  NSKiCadParser.cpp  NSKiCadParser.h
src/package/utils/: NSPackageFlatten.cpp  NSPackageFlatten.h  NSPackageRenderer.cpp  NSPackageRenderer.h  NSPackageRetriever.cpp  NSPackageRetriever.h
src/parasitic/: CMakeLists.txt  NSParasitic.cpp  NSParasitic.h  NSParasiticNet.cpp  NSParasiticNet.h
src/parasitic/parser/: NSParasiticDescription.hpp  NSParasiticGrammar.hpp  NSParasiticParser.hpp
src/power/: CMakeLists.txt  NSLossPower.cpp  NSLossPower.h
src/verilog/: CMakeLists.txt  NSVerilog.cpp  NSVerilog.h
src/verilog/parser/: NSVerilogDescription.hpp  NSVerilogGrammar.hpp  NSVerilogParser.hpp
test/: CMakeLists.txt  TEST_COVERAGE.md  TestArchive.hpp  TestArchiveEnhanced.hpp  TestBasic.hpp  TestChip.hpp  TestChipEnhanced.hpp  TestCommon.hpp  TestCommonModule.hpp  TestEdgeCases.hpp  TestLiberty.hpp  TestLibertyEnhanced.hpp  TestPackage.hpp  TestPackageExtension.hpp  TestParasitic.hpp  TestPower.hpp  TestVerilog.hpp  UnitTest.cpp
test/data/package/: test.kicad_pcb
test/data/parasitic/: simple.spef
test/data/verilog/: test.v
tools/: project-words.txt  sync
