add_library(nanoLiberty
    NSLiberty.cpp
    NSLibertyCell.cpp
    NSLibertyInternalPower.cpp
    NSLibertyLeakagePower.cpp
    NSLibertyLibrary.cpp
    NSLibertyLut.cpp
    NSLibertyLutTemplate.cpp
    NSLibertyOperatingConditions.cpp
    NSLibertyOutputCurrent.cpp
    NSLibertyPin.cpp
    NSLibertyTiming.cpp
    NSLibertyVoltage.cpp
)