add_library(nanoLiberty
    NSLiberty.cpp
    NSLibertyCell.cpp
    NSLibertyInternalPower.cpp
    NSLibertyLeakagePower.cpp
    NSLibertyLibrary.cpp
    NSLibertyLut.cpp
    NSLibertyLutTemplate.cpp
    NSLibertyOperatingConditions.cpp
    NSLibertyOutputCurrent.cpp
    NSLibertyPin.cpp
    NSLibertyTiming.cpp
    NSLibertyVoltage.cpp
)

target_link_libraries(nanoLiberty
    nanoBasic
    ${MALLOC_LIB}
    ${PNG_LIBRARY} 
    Threads::Threads
    Boost::serialization
    dl
)