add_library(nano_liberty
    NSLiberty.cpp
    NSLibertyCell.cpp
    NSLibertyInternalPower.cpp
    NSLibertyLeakagePower.cpp
    NSLibertyLibrary.cpp
    NSLibertyLut.cpp
    NSLibertyLutTemplate.cpp
    NSLibertyOperatingConditions.cpp
    NSLibertyOutputCurrent.cpp
    NSLibertyPin.cpp
    NSLibertyTiming.cpp
    NSLibertyVoltage.cpp
)

target_link_libraries(nano_liberty
    nano_basic
    ${MALLOC_LIB}
    ${PNG_LIBRARY} 
    Threads::Threads
    Boost::serialization
    dl
)