add_library(nanoPackage
    edit/NSPackageEditInterface.cpp
    extension/kicad/NSKiCadExtension.cpp
    extension/kicad/NSKiCadObject.cpp
    extension/kicad/NSKiCadParser.cpp
    extension/NSPackageExtension.cpp
    utils/NSPackageFlatten.cpp
    utils/NSPackageRenderer.cpp
    utils/NSPackageRetriever.cpp
    NSPackage.cpp
    NSPackageCell.cpp
    NSPackageConnObj.cpp
    NSPackageComponent.cpp
    NSPackageFootprint.cpp
    NSPackageHierObj.cpp
    NSPackageLayer.cpp
    NSPackageLayout.cpp
    NSPackageNet.cpp
    NSPackagePadstack.cpp
    NSPackagePin.cpp
)