add_library(nano_package
    edit/NSPackageEditInterface.cpp
    extension/kicad/NSKiCadExtension.cpp
    extension/kicad/NSKiCadObject.cpp
    extension/kicad/NSKiCadParser.cpp
    extension/NSPackageExtension.cpp
    utils/NSPackageFlatten.cpp
    utils/NSPackageRenderer.cpp
    utils/NSPackageRetriever.cpp
    NSPackage.cpp
    NSPackageCell.cpp
    NSPackageConnObj.cpp
    NSPackageComponent.cpp
    NSPackageFootprint.cpp
    NSPackageHierObj.cpp
    NSPackageLayer.cpp
    NSPackageLayout.cpp
    NSPackageNet.cpp
    NSPackagePadstack.cpp
    NSPackagePin.cpp
)

target_link_libraries(nano_package
    nano_basic
    nano_common
    nano_power
    ${MALLOC_LIB}
    ${PNG_LIBRARY} 
    Threads::Threads
    Boost::serialization
    dl
)